--- a/tmux.conf
+++ b/tmux.conf
@@ -101,12 +101,12 @@ set -g message-command-bg colour54
 set -g message-command-fg colour255
 
 #Pane border
-#set -g pane-border-bg default
-#set -g pane-border-fg colour23
+set -g pane-border-bg default
+set -g pane-border-fg colour23
 
 #Active pane border
-#set -g pane-active-border-bg default
-#set -g pane-active-border-fg colour36
+set -g pane-active-border-bg default
+set -g pane-active-border-fg colour36
 
 #Pane number indicator
 #set -g display-panes-colour colour23
