Update current window separator

--- a/tmux.conf
+++ b/tmux.conf
@@ -33,8 +33,7 @@ bind-key k kill-window
 #Gestion terminal
 set-window-option -g xterm-keys on
 set -g default-terminal "tmux-256color"
-#set -g terminal-overrides "putty*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
-set -ga terminal-overrides "*-256color:Tc"
+set -g terminal-overrides "putty*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@,*-256color:Tc"
 
 #Agrandir/retrecir le pane
 bind-key -n C-Space resize-pane -Z
@@ -146,7 +145,7 @@ set -g status-bg '#002B2B'
 set -g status-left "#[fg=colour255,bg=#005252]#[bold] Session #S #[fg=#005252,bg=#002B2B]"
 set -g status-right " #(uptime | cut -d "," -f 2-) #[fg=#005252,bg=#002B2B]#[fg=colour255,bg=#005252] %H:%M #[fg=#003F3F,bg=#005252]#[fg=colour255,bg=#003F3F bold] #{session_attached} #[fg=#005252,bg=#003F3F]#[fg=colour255,bg=#005252] #[fg=colour255,bg=#005252,bold]#h "
 set -g window-status-format "#[fg=#002B2B,bg=#003F3F]#{?window_activity_flag,#[bg=colour255 fg=#002B2B],#[bg=#003F3F fg=#002B2B]}#[fg=colour255,bg=#003F3F]#{?window_activity_flag,#[bg=colour255 fg=colour28],#[bg=#003F3F fg=colour255]} #I#F  #W #[fg=#003F3F,bg=#002B2B]#{?window_activity_flag,#[bg=#002B2B fg=colour255],#[bg=#002B2B fg=#003F3F]}"
-set -g window-status-current-format "#[fg=#002B2B,bg=colour202]#[fg=colour255,bg=colour202] #I#F / #W #[fg=colour202,bg=#002B2B]"
+set -g window-status-current-format "#[fg=#002B2B,bg=colour202]#[fg=colour255,bg=colour202] #I#F  #W #[fg=colour202,bg=#002B2B]"
 #}
 
 #256 colors with powerline symbol {
