--- a/tmux.conf
+++ b/tmux.conf
@@ -4,38 +4,42 @@
 #                  #
 ####################
 
-#Remapping Ctrl+b vers Ctrl+x
+# Remapping Ctrl+b to Ctrl+x
 set -g prefix2 C-x
 #set -g prefix2 C-a
 #bind C-a send-prefix
 #unbind C-b
 
-#Alt+fléches gauche/droite pour bouger entre les fenêtres
+# Set shell
+set-option -g default-shell /usr/bin/zsh
+
+# Alt + arrows (left / right) to move between windows
 bind-key -n M-Right next-window
 bind-key -n M-Left previous-window
 
-#Shift+fléches gauche/droite/haut/bas pour bouger entre les split
+# Shift + arrows (left / right / up / down) to move between splits
 #bind-key -n C-M-Left select-pane -L
 #bind-key -n C-M-Right select-pane -R
 #bind-key -n C-M-Up select-pane -U
 #bind-key -n C-M-Down select-pane -D
 
-#Split vertical/horizontal
+# Split vertically / horizontally
 bind-key v split-window -h
 bind-key h split-window -v
 
-#Nouvelle fenêtre
+# New window
 #bind-key w new-window
 
-#Kill window
+# Kill window
 bind-key k kill-window
 
-#Gestion terminal
+# Manage terminal
 set-window-option -g xterm-keys on
 set -g default-terminal "tmux-256color"
-set -g terminal-overrides "putty*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@,*-256color:Tc"
+set -g terminal-overrides "putty*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
+set -ga terminal-overrides "*-256color:Tc"
 
-#Agrandir/retrecir le pane
+# Expend / shrink the current pane
 bind-key -n C-Space resize-pane -Z
 
 
@@ -45,32 +49,29 @@ bind-key -n C-Space resize-pane -Z
 #                         #
 ###########################
 
-#Gestion souris
+# Manage mouse
 set -g mouse on
 
-#Bip
+# Bip
 set -g bell-action none
 
-#Mise à jour de la barre de status status
+# Update status bar all 15 secs
 set -g status-interval 15
-
 setw -g monitor-activity on
-#setw -g window-status-activity-bg red
-#setw -g window-status-activity-fg yellow
-#set-option -gw window-status-activity-attr bold
+#setw -g window-status-activity-style bg=red,fg=yellow,bold
 #setw monitor-silence 30
 #set-option -agw window-status-activity-style fg=white,bg=red,blink
 #set-option -gw window-status-activity-style fg=red,bg=black,bold
 #set -g visual-activity on
 
-#Recharger la config
+# Reload the configuration
 #bind-key r source-file /etc/tmux/tmux.conf \; display-message "Configuration reloaded"
 bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 
-#History size
+# Set history size
 set -g history-limit 20000
 
-#Temps pour éviter de renvoyer le send-prefix entre chaque comande
+# Time to sleep between commands to avoid to send send-prefix
 set -g repeat-time 1000
 
 
@@ -80,81 +81,71 @@ set -g repeat-time 1000
 #               #
 #################
 
-#Position de la statusbar
+# status bar position
 set -g status-position bottom
 
-#Définition des couleurs du thème
-set -g status-fg colour255
-set -g status-bg colour23
+# Messages
+set -g message-style fg=colour255,bg=colour54,bold
 
-#Messages
-set -g message-fg default
-set -g message-fg colour255
-set -g message-bg default
-set -g message-bg colour54
-set -g message-attr default
-set -g message-attr bold
+# Command message
+set -g message-command-style bg=colour54,fg=colour255
 
-#Command message
-set -g message-command-bg colour54
-set -g message-command-fg colour255
-
-#Pane border
-set -g pane-border-bg default
-set -g pane-border-fg colour23
-
-#Active pane border
-set -g pane-active-border-bg default
-set -g pane-active-border-fg colour36
-
-#Pane number indicator
+# Pane number indicator
 #set -g display-panes-colour colour23
 #set -g display-panes-active-colour colour36
 
-#Status bar
+# Status bar
 set -g window-status-separator ''
 set-option -gw window-status-activity-style none
 
-#set -g status-left-bg colour255
-#set -g status-left-fg colour29
+#set -g status-left-style bg=colour255,fg=colour29
 set -g status-left-length 40
 set -g status-right-length 100
 
-#set -g status-right-bg colour255
-#set -g status-right-fg colour23
-#set -g window-status-current-bg colour25
-#set -g window-status-current-fg colour29
+#set -g status-right-style bg=colour255,fg=colour23
+#set -g window-status-current-style bg=colour25,fg=colour29
 
-#True colors {
-#set -g status-bg '#002B2B'
+# True colors {
+#set -g status-style fg=colour255,bg='#002B2B'
+#set -g pane-border-style fg='#002B2B'
+#set -g pane-active-border-style fg='#005252'
 #set -g status-left "#[fg=colour255,bg=#005252]#[bold] Session #S # "
 #set -g window-status-format "#[bg=#002B2B] #[fg=colour255,bg=#003F3F] #I#F / #W "
 #set -g status-right "#(uptime | cut -d "," -f 2-) #[fg=colour255,bg=#005252] %H:%M #[fg=colour255,bg=#003F3F,bold] #{session_attached} #[fg=colour255,bg=#005252,bold] #(whoami)@#h "
 #set -g window-status-current-format " #[fg=colour255,bg=colour202] #I#F / #W #[fg=colour202,bg=#002B2B]"
 #}
 
-#256color {
+# 256color {
+#set -g status-style fg=colour255,bg=colour23
+#set -g pane-border-style fg=colour23
+#set -g pane-active-border-style fg=colour36
 #set -g status-left "#[fg=colour255,bg=colour36]#[bold] Session #S # "
 #set -g window-status-format "#[bg=colour23] #[fg=colour255,bg=colour29] #I#F / #W "
 #set -g status-right "#(uptime | cut -d "," -f 2-) #[fg=colour255,bg=colour36] %H:%M #[fg=colour255,bg=colour29,bold] #{session_attached} #[fg=colour255,bg=colour36,bold] #(whoami)@#h "
 #set -g window-status-current-format " #[fg=colour255,bg=colour202] #I#F / #W #[fg=colour202,bg=colour23]"
 #}
 
-#True colors with powerline symbol {
-set -g status-bg '#002B2B'
+# True colors with powerline symbol {
+set -g status-style fg=colour255,bg='#002B2B'
+set -g pane-border-style fg='#003F3F'
+set -g pane-active-border-style fg='#005252'
 set -g status-left "#[fg=colour255,bg=#005252]#[bold] Session #S #[fg=#005252,bg=#002B2B]"
 set -g status-right " #(uptime | cut -d "," -f 2-) #[fg=#005252,bg=#002B2B]#[fg=colour255,bg=#005252] %H:%M #[fg=#003F3F,bg=#005252]#[fg=colour255,bg=#003F3F bold] #{session_attached} #[fg=#005252,bg=#003F3F]#[fg=colour255,bg=#005252] #[fg=colour255,bg=#005252,bold]#h "
 set -g window-status-format "#[fg=#002B2B,bg=#003F3F]#{?window_activity_flag,#[bg=colour255 fg=#002B2B],#[bg=#003F3F fg=#002B2B]}#[fg=colour255,bg=#003F3F]#{?window_activity_flag,#[bg=colour255 fg=colour28],#[bg=#003F3F fg=colour255]} #I#F  #W #[fg=#003F3F,bg=#002B2B]#{?window_activity_flag,#[bg=#002B2B fg=colour255],#[bg=#002B2B fg=#003F3F]}"
 set -g window-status-current-format "#[fg=#002B2B,bg=colour202]#[fg=colour255,bg=colour202] #I#F  #W #[fg=colour202,bg=#002B2B]"
 #}
 
-#256 colors with powerline symbol {
+# 256 colors with powerline symbol {
+#set -g status-style fg=colour255,bg=colour23
+#set -g pane-border-style fg=colour23
+#set -g pane-active-border-style fg=colour36
 #set -g status-left "#[fg=colour255,bg=colour36]#[bold] Session #S #[fg=colour36,bg=colour23]"
 #set -g status-right " #(uptime | cut -d "," -f 2-) #[fg=colour36,bg=colour23]#[fg=colour255,bg=colour36] %H:%M #[fg=colour29,bg=colour36]#[fg=colour255,bg=colour29 bold] #{session_attached} #[fg=colour36,bg=colour29]#[fg=colour255,bg=colour36] #[fg=colour255,bg=colour36,bold]#h "
 #set -g window-status-format "#[fg=colour23,bg=colour29]#{?window_activity_flag,#[bg=colour255 fg=colour23],#[bg=colour29 fg=colour23]}#[fg=colour255,bg=colour29]#{?window_activity_flag,#[bg=colour255 fg=colour28],#[bg=colour29 fg=colour255]} #I#F  #W #[fg=colour29,bg=colour23]#{?window_activity_flag,#[bg=colour23 fg=colour255],#[bg=colour23 fg=colour29]}"
-#set -g window-status-current-format "#[fg=colour23,bg=colour202]#[fg=colour255,bg=colour202] #I#F / #W #[fg=colour202,bg=colour23]"
+#set -g window-status-current-format "#[fg=colour23,bg=colour202]#[fg=colour255,bg=colour202] #I#F  #W #[fg=colour202,bg=colour23]"
 #}
 
+# vi mode
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
